--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [tool.poetry]
 name = "quote-generator-0216"
+packages = [
+    { include = "quote_generator" },
+]
 version = "0.1.0"
 description = ""
 authors = ["Alec Wang <alswang18@gmail.com>"]
